--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <h1>  Hello World! </h1>
+    <p>
+        this is just a sample webpage
+    </p>
+    <style>
+        h1 {
+            color: brown;
+            font-size: 100px;
+        }
+    </style>
 </body>
 </html>
