--- a/index.html
+++ b/index.html
@@ -1,21 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="./resources/CSS/style.css" />
+
     <title>Akshay-Minz-Portfolio</title>
-</head>
-<body>
-    <h1>  Hello World! </h1>
-    <p>
-        this is just a sample webpage
-    </p>
-    <style>
-        h1 {
-            color: brown;
-            font-size: 100px;
-        }
-    </style>
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <section class="heading">
+        <div>
+          <h1>AKSHAY KUMAR MINZ</h1>
+          <em>
+            09686990537 | Bangalore North, Karnataka, India
+            akshayatwork.v30@gmail.com | www.linkedin.com/in/minzakshaykumar06
+          </em>
+        </div>
+      </section>
+
+      <section class="summary">
+        <h2>Summary</h2>
+        <p>
+          Trained DevOps Engineer with Edureka, Good hands-on knowledge of
+          various DevOps tools. Proficient in implementing Continuous
+          Integration/ Delivery pipelines on AWS Cloud Platform
+        </p>
+      </section>
+
+      <section class="skills">
+        <h2>Skills</h2>
+        <ol>
+          <li>Programming Languages: C++, Python</li>
+          <li>Source Code Management: Git.</li>
+          <li>Continuous Integration Server: Jenkins</li>
+          <li>Configuration Management tool: Ansible</li>
+          <li>Containerization Solution: Docker</li>
+          <li>Container Orchestration : Kubernetes</li>
+          <li>Cloud Platforms: AWS</li>
+          <li>Infrastructure as code tool :Terraform</li>
+        </ol>
+      </section>
+
+      <section class="projects">
+        <h2>Projects</h2>
+        <div>
+          <li>
+            <h3>Continuous Integration for sample app.</h3>
+            <p>
+               Spin-up AWS EC2 instance with minimal configuration.  Managed
+              source codes with source code management tool using Git. 
+              Automated Continuous Integration pipeline for a sample app using
+              Jenkins.
+            </p>
+          </li>
+          <li>
+            <h3>
+              Implementation of Continuous Integration and Continuous Deployment
+              for sample app
+            </h3>
+            <p>
+              Provisioned and configured AWS EC2 instances.  Jenkins automated
+              the task for deploying Docker Containers for respective Docker
+              image  Continuous Integration and Continuous Deployment pipeline
+              with Jenkins was made.
+            </p>
+          </li>
+          <li>
+            <h3>End to End web application deployment</h3>
+            <p>
+              Sample web-app was deployed with terraform on AWS cloud platform.
+               Modules consisting of VPC and RDS (MySQL) resources were
+              declared.  AWS EC2 instance resource was configured with ALB and
+              Auto Scaling Group for the webserver.
+            </p>
+          </li>
+        </div>
+      </section>
+
+      <section class="workExperince">
+        <h2>WORK EXPERIENCE | INTERNSHIP</h2>
+        <div>
+          <li>
+            <h3>
+              CAE Engineer (intern), Tata-Marco Polo Motors Ltd., Dharwad. | Mar
+              2018 - May 2018
+            </h3>
+            <p>
+              CAD Model was re-modeled for jack knife type bus door using
+              Siemens NX 9.0 software package prior to perform the desired FEA
+              analysis. o Structural Analysis as well as Fatigue Analysis was
+              performed on the product which resulted in negligible amount of
+              deformation, which concludes that the product has a structural
+              stability under normal operating conditions.
+            </p>
+            <em>Tools used: Siemens NX 9.0, ANSYS Work Bench 14.0.</em>
+          </li>
+
+          <li>
+            <h3>
+              CAE Engineer (intern), Bharat Electronics ltd, Bangalore. | Aug
+              2017 - Sept.2017
+            </h3>
+            <p>
+              CAD Model was remodeled for a general adapter module using Pro E
+              software package prior to perform the desired FEA Analysis. o
+              Structural Analysis and Thermal Analysis was performed on the
+              product prior to observe the product behavior under certain lab
+              condition. o Furthermore, Fixture for Drilling Holes was designed
+              and modeled to facilitate.
+            </p>
+            <em>Tools used: Pro E, ANSYS Work Bench 14.0.</em>
+          </li>
+          <li>
+            <h3>
+              CAD Engineer (intern), Hindustan Aeronautics ltd., Bangalore. |
+              April 2015 - May 2015
+            </h3>
+            <p>
+              CAD Model was remodeled for a general Accumulator body using Solid
+              Edge ST-7 Software Package. o A Material Flow Simulation using
+              Deform-3DTM software package was performed to visualize the
+              material flows during forging process. Furthermore, the effective
+              stress & strain was observed for the product.
+            </p>
+            <em>Tools used: Solid Edge ST-7 , Deform-3DTM</em>
+          </li>
+        </div>
+      </section>
+
+      <section class="acdemicQualifications">
+        <h2>ACADEMIC QUALIFICATIONS</h2>
+        <ol>
+          <li>
+            Master of Technology, Product Design & Manufacturing. 2016 - 2018
+            Department of P.G. Studies, V.T.U., Belagavi, 590018. | 71.1%
+          </li>
+          <li>
+            Bachelor of Engineering, Mechanical Engineering. 2011 - 2015 Sha -
+            Shib College of Engineering, Chikkabalapur, 562101.
+          </li>
+          <li>
+            A.I.S.S.C.E. (Class XII) June 2010 Kendriya Vidyalaya, G.C.C.R.P.F.,
+            Yelahanka, Bangalore 560064.
+          </li>
+          <li>
+            A.I.S.S.E. (Class X) June 2008 Kendriya Vidyalaya, G.C.C.R.P.F.,
+            Yelahanka, Bangalore 560064.
+          </li>
+        </ol>
+      </section>
+
+      <section class="certificationsTraining">
+        <h2>CERTIFICATIONS | TRAINING</h2>
+        <ol>
+          <li>
+            1. DevOps Engineer | EDUREKA Aug. 2020 https://www.edureka.co/verify
+            Certificate ID: Y3V1G41M
+          </li>
+          <li>
+            ANSYS | CADD-Centre Feb. 2018
+            http://www.caddcentre.com/caddVerification.php Student ID No.:
+            M171016812
+          </li>
+        </ol>
+      </section>
+
+      <section class="personalDetails">
+        <h2>Peronal Details</h2>
+        <ol>
+          <li>Address : Yelahanka New Town, Bangalore -560064</li>
+          <li>Re-location : Yes</li>
+          <li>Language Known : English, Hindi</li>
+          <li>Passport : Yes</li>
+        </ol>
+      </section>
+    </div>
+  </body>
 </html>
