--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./resources/CSS/style.css" />
-
     <title>Akshay-Minz-Portfolio</title>
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/CSS/style.css" />
   </head>
   <body>
     <div class="container">
@@ -15,8 +19,13 @@
         <div>
           <h1>AKSHAY KUMAR MINZ</h1>
           <em>
-            09686990537 | Bangalore North, Karnataka, India
-            akshayatwork.v30@gmail.com | www.linkedin.com/in/minzakshaykumar06
+            09686990537 | Bangalore North, Karnataka, India |
+            akshayatwork.v30@gmail.com <br />
+            <a href="https://www.linkedin.com/in/minzakshaykumar06"
+              >Linkedin-Profile</a
+            >
+            <a href="https://github.com/AkshayV30">GitHub-Repos</a>
+            <a href="https://grabcad.com/akshay.v30-1"> Grab-CAD-Profile</a>
           </em>
         </div>
       </section>
