--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div>
           <h1>AKSHAY KUMAR MINZ</h1>
           <em>
-            09686990537 | Bangalore North, Karnataka, India |
+          -- | Bangalore North, Karnataka, India |
             akshayatwork.v30@gmail.com <br />
             <a href="https://www.linkedin.com/in/minzakshaykumar06"
               >Linkedin-Profile</a
