--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     />
     <link rel="stylesheet" href="./assets/CSS/style.css" />
   </head>
+
   <body>
+
+    <audio autoplay loop> 
+      <source src="./assets/audio/audio_1.mp3" type="audio/mp3"> audio 
+    </audio>
+
+
     <div class="container">
       <section class="heading">
         <div>
@@ -55,7 +62,7 @@
 
       <section class="projects">
         <h2>Projects</h2>
-        <div>
+        <ol>
           <li>
             <h3>Continuous Integration for sample app.</h3>
             <p>
@@ -86,12 +93,12 @@
               Auto Scaling Group for the webserver.
             </p>
           </li>
-        </div>
+        </ol>
       </section>
 
       <section class="workExperince">
         <h2>WORK EXPERIENCE | INTERNSHIP</h2>
-        <div>
+        <ol>
           <li>
             <h3>
               CAE Engineer (intern), Tata-Marco Polo Motors Ltd., Dharwad. | Mar
@@ -137,7 +144,7 @@
             </p>
             <em>Tools used: Solid Edge ST-7 , Deform-3DTM</em>
           </li>
-        </div>
+        </ol>
       </section>
 
       <section class="acdemicQualifications">
@@ -178,7 +185,7 @@
       </section>
 
       <section class="personalDetails">
-        <h2>Peronal Details</h2>
+        <h2>Personal Details</h2>
         <ol>
           <li>Address : Yelahanka New Town, Bangalore -560064</li>
           <li>Re-location : Yes</li>
@@ -187,5 +194,7 @@
         </ol>
       </section>
     </div>
+   
   </body>
+
 </html>
