--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <body>
 
     <audio autoplay loop> 
-      <source src="./assets/audio/audio_1.mp3" type="audio/mp3"> audio 
+      <source src="./assets/audio/audio_1.mp3" type="audio/mp3">
+      <source src="https://github.com/AkshayV30/AkshayV30/blob/master/assets/audio/audio_1.mp3" type="audio/mp3"> audio 
     </audio>
 
 
