--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
 
-    <audio autoplay loop> 
+    <audio controls autoplay loop> 
       <source src="./assets/audio/audio_1.mp3" type="audio/mp3">
       <source src="https://github.com/AkshayV30/AkshayV30/raw/master/assets/audio/audio_1.mp3" type="audio/mp3"> audio 
     </audio>
