--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
 
   <body>
 
-    <audio controls autoplay loop> 
+    <!-- <audio controls autoplay loop> 
       <source src="./assets/audio/audio_1.mp3" type="audio/mp3">
       <source src="https://github.com/AkshayV30/AkshayV30/raw/master/assets/audio/audio_1.mp3" type="audio/mp3"> audio 
-    </audio>
+    </audio> -->
 
+    <video autoplay controls loop class="b-video">
+      <source src="./assets/video/video_1.mp4" type="video/mp4">
+      <source src="https://github.com/AkshayV30/AkshayV30/raw/master/assets/video/video_1.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+
+   
 
     <div class="container">
       <section class="heading">
