update-index.html

--- a/index.html
+++ b/index.html
@@ -15,27 +15,28 @@
   </head>
 
   <body>
+    <audio controls autoplay loop id="audio">
+      <source src="./assets/audio/audio_1.mp3" type="audio/mp3" />
+      <source
+        src="https://github.com/AkshayV30/AkshayV30/raw/master/assets/audio/audio_1.mp3"
+        type="audio/mp3"
+      />
+      audio
+    </audio>
 
-    <!-- <audio controls autoplay loop> 
-      <source src="./assets/audio/audio_1.mp3" type="audio/mp3">
-      <source src="https://github.com/AkshayV30/AkshayV30/raw/master/assets/audio/audio_1.mp3" type="audio/mp3"> audio 
-    </audio> -->
-
-    <video autoplay controls loop class="b-video">
+    <!-- <video autoplay controls loop class="b-video">
       <source src="./assets/video/video_1.mp4" type="video/mp4">
       <source src="https://github.com/AkshayV30/AkshayV30/raw/master/assets/video/video_1.mp4" type="video/mp4">
       Your browser does not support the video tag.
-    </video>
-
-   
+    </video> -->
 
     <div class="container">
-      <section class="heading">
+      <div class="heading">
         <div>
           <h1>AKSHAY KUMAR MINZ</h1>
           <em>
-          -- | Bangalore North, Karnataka, India |
-            akshayatwork.v30@gmail.com <br />
+            -- | Bangalore North, Karnataka, India | akshayatwork.v30@gmail.com
+            <br />
             <a href="https://www.linkedin.com/in/minzakshaykumar06"
               >Linkedin-Profile</a
             >
@@ -43,32 +44,177 @@
             <a href="https://grabcad.com/akshay.v30-1"> Grab-CAD-Profile</a>
           </em>
         </div>
-      </section>
+      </div>
 
-      <section class="summary">
+      <div class="summary">
         <h2>Summary</h2>
         <p>
           Trained DevOps Engineer with Edureka, Good hands-on knowledge of
           various DevOps tools. Proficient in implementing Continuous
           Integration/ Delivery pipelines on AWS Cloud Platform
         </p>
-      </section>
+      </div>
 
-      <section class="skills">
-        <h2>Skills</h2>
-        <ol>
-          <li>Programming Languages: C++, Python</li>
-          <li>Source Code Management: Git.</li>
-          <li>Continuous Integration Server: Jenkins</li>
-          <li>Configuration Management tool: Ansible</li>
-          <li>Containerization Solution: Docker</li>
-          <li>Container Orchestration : Kubernetes</li>
-          <li>Cloud Platforms: AWS</li>
-          <li>Infrastructure as code tool :Terraform</li>
-        </ol>
-      </section>
+      <div class="skills">
+        <div><h2>Skills</h2></div>
 
-      <section class="projects">
+        <div>
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/c++.png" alt="c++ logo" />
+            <span class="tooltiptext">C++</span></a
+          >
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/java-vertical.svg" alt="java" />
+            <span class="tooltiptext">Java</span></a
+          >
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/python-svgrepo-com.svg" alt="python" />
+            <span class="tooltiptext">Python</span></a
+          >
+        </div>
+
+        <div>
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/html5.png" alt="html5" />
+            <span class="tooltiptext">HTML5</span></a
+          >
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/CSS3.png" alt="css3" />
+            <span class="tooltiptext">CSS3</span></a
+          >
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/sass.png" alt="sass" />
+            <span class="tooltiptext">SASS</span></a
+          >
+          <a href="#" class="tooltip"
+            ><img
+              src="./assets/images/javascript-logo-svgrepo-com.svg"
+              alt="javascript"
+            />
+            <span class="tooltiptext">javascript</span></a
+          >
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/angular.png" alt="angularJs" />
+            <span class="tooltiptext">angularJs</span></a
+          >
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/react.png" alt="reactJS" />
+            <span class="tooltiptext">reactJS</span></a
+          >
+        </div>
+
+        <div>
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/nodejs-svgrepo-com.svg" alt="nodejs" />
+            <span class="tooltiptext">NodeJS</span></a
+          >
+          <a href="#" class="tooltip"
+            ><img
+              src="./assets/images/nginx-logo-svgrepo-com.svg"
+              alt="nginx"
+            />
+            <span class="tooltiptext">NGINX</span></a
+          >
+        </div>
+
+        <div>
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/bash-icon-svgrepo-com.svg" alt="bash" />
+            <span class="tooltiptext">bash</span></a
+          >
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/linux-svgrepo-com.svg" alt="linux" />
+            <span class="tooltiptext">linux</span></a
+          >
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/ubuntu-svgrepo-com.svg" alt="ubuntu" />
+            <span class="tooltiptext">Ubuntu</span></a
+          >
+        </div>
+
+        <div>
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/github-svgrepo-com.svg" alt="git" />
+            <span class="tooltiptext">github</span></a
+          >
+        </div>
+
+        <div>
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/terraform.png" alt="terraform" />
+            <span class="tooltiptext">terraform</span></a
+          >
+          <a href="#" class="tooltip">
+            <img src="./assets/images/ansible-svgrepo-com.svg" alt="ansible" />
+            <span class="tooltiptext">ansible</span></a
+          >
+        </div>
+        <div>
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/aws-svgrepo-com.svg" alt="aws" />
+            <span class="tooltiptext">amazon web services</span></a
+          >
+          <a href="#" class="tooltip">
+            <img src="./assets/images/aws-ec2-svgrepo-com.png" alt="aws-ec2" />
+            <span class="tooltiptext">AWS Elastic Compute 2</span></a
+          >
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/aws-iam-svgrepo-com.svg" alt="aws-iam" />
+            <span class="tooltiptext">AWS IAM</span></a
+          >
+          <a href="#" class="tooltip">
+            <img
+              src="./assets/images/aws-cloudformation-svgrepo-com.svg"
+              alt="aws-cloudformation"
+            />
+            <span class="tooltiptext">AWS Cloud Formation</span></a
+          >
+          <a href="#" class="tooltip">
+            <img
+              src="./assets/images/aws-codedeploy-svgrepo-com.svg"
+              alt="aws-codedeploy"
+            />
+            <span class="tooltiptext">AWS Cloud Deploy</span></a
+          >
+        </div>
+
+        <div>
+          <a href="#" class="tooltip"
+            ><img
+              src="./assets/images/githubactions-svgrepo-com.svg"
+              alt="githubactions"
+            />
+            <span class="tooltiptext">githubactions</span></a
+          >
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/jenkins-svgrepo-com.svg" alt="Jenkins" />
+            <span class="tooltiptext">Jenkins</span></a
+          >
+        </div>
+
+        <div>
+          <a href="#" class="tooltip"
+            ><img
+              src="./assets/images/prometheus-svgrepo-com.svg"
+              alt="prometheus"
+            />
+            <span class="tooltiptext">prometheus</span></a
+          >
+          <a href="#" class="tooltip"
+            ><img src="./assets/images/grafana-svgrepo-com.svg" alt="grafana" />
+            <span class="tooltiptext">grafana</span></a
+          >
+          <a href="#" class="tooltip">
+            <img
+              src="./assets/images/aws-cloudwatch-svgrepo-com.svg"
+              alt="awscloudwatch"
+            />
+            <span class="tooltiptext">AWS Cloud Watch</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="projects">
         <h2>Projects</h2>
         <ol>
           <li>
@@ -102,9 +248,9 @@
             </p>
           </li>
         </ol>
-      </section>
+      </div>
 
-      <section class="workExperince">
+      <div class="workExperince">
         <h2>WORK EXPERIENCE | INTERNSHIP</h2>
         <ol>
           <li>
@@ -153,9 +299,9 @@
             <em>Tools used: Solid Edge ST-7 , Deform-3DTM</em>
           </li>
         </ol>
-      </section>
+      </div>
 
-      <section class="acdemicQualifications">
+      <div class="acdemicQualifications">
         <h2>ACADEMIC QUALIFICATIONS</h2>
         <ol>
           <li>
@@ -175,9 +321,9 @@
             Yelahanka, Bangalore 560064.
           </li>
         </ol>
-      </section>
+      </div>
 
-      <section class="certificationsTraining">
+      <div class="certificationsTraining">
         <h2>CERTIFICATIONS | TRAINING</h2>
         <ol>
           <li>
@@ -190,19 +336,36 @@
             M171016812
           </li>
         </ol>
-      </section>
+      </div>
 
-      <section class="personalDetails">
-        <h2>Personal Details</h2>
+      <div class="contact">
+        <!-- <h2>Personal Details</h2>
         <ol>
           <li>Address : Yelahanka New Town, Bangalore -560064</li>
           <li>Re-location : Yes</li>
           <li>Language Known : English, Hindi</li>
           <li>Passport : Yes</li>
-        </ol>
-      </section>
-    </div>
-   
-  </body>
+        </ol> -->
 
+        <h2>contact</h2>
+
+        <a href="https://www.frontendmentor.io/profile/AkshayV30">
+          frontendmentor</a
+        >
+
+        <a href="https://www.linkedin.com/in/minzakshaykumar06" class="tooltip">
+          <img src="./assets/images/linkedin-svgrepo-com.svg" alt="linkedin" />
+          <span class="tooltiptext">Linkedin-Profile</span>
+        </a>
+        <a href="https://leetcode.com/Akshayv30/" class="tooltip">
+          <img src="./assets/images/leetcode-svgrepo-com.svg" alt="leetcode" />
+          <span class="tooltiptext">leetcode</span>
+        </a>
+        <a href="https://www.hackerrank.com/akshayatwork_v30" class="tooltip">
+          <img src="./assets/images/HackerRank_logo.png" alt="hackerrank" />
+          <span class="tooltiptext">hackerrank</span>
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
