update-index.html -01

--- a/index.html
+++ b/index.html
@@ -15,44 +15,49 @@
   </head>
 
   <body>
-    <audio controls autoplay loop id="audio">
-      <source src="./assets/audio/audio_1.mp3" type="audio/mp3" />
-      <source
-        src="https://github.com/AkshayV30/AkshayV30/raw/master/assets/audio/audio_1.mp3"
-        type="audio/mp3"
-      />
-      audio
-    </audio>
-
-    <!-- <video autoplay controls loop class="b-video">
-      <source src="./assets/video/video_1.mp4" type="video/mp4">
-      <source src="https://github.com/AkshayV30/AkshayV30/raw/master/assets/video/video_1.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video> -->
-
     <div class="container">
       <div class="heading">
         <div>
-          <h1>AKSHAY KUMAR MINZ</h1>
-          <em>
-            -- | Bangalore North, Karnataka, India | akshayatwork.v30@gmail.com
-            <br />
-            <a href="https://www.linkedin.com/in/minzakshaykumar06"
-              >Linkedin-Profile</a
-            >
-            <a href="https://github.com/AkshayV30">GitHub-Repos</a>
-            <a href="https://grabcad.com/akshay.v30-1"> Grab-CAD-Profile</a>
-          </em>
+          <h1>Akshay Kumar Minz</h1>
         </div>
       </div>
 
-      <div class="summary">
-        <h2>Summary</h2>
+      <div class="aboutMe">
+        <h2>About Me</h2>
         <p>
-          Trained DevOps Engineer with Edureka, Good hands-on knowledge of
-          various DevOps tools. Proficient in implementing Continuous
-          Integration/ Delivery pipelines on AWS Cloud Platform
+          I am Trained DevOps Engineer with Edureka; and a self taught Front End Developer have done my Masters in Product Design and Manufacturing. Have hands on EXPERIENCE  and knowledge of
+          various DevOps and Front End Tools and Technologies. Proficient in deploying webapps by implementing Continuous Integration tool and Delivery pipelines on AWS Cloud Platform with various other tools.
         </p>
+      </div>
+
+      <div class="stats">
+        <div>
+          <h2>stats</h2>
+          <a href="https://www.frontendmentor.io/profile/AkshayV30">
+            frontendmentor</a
+          >
+          <a
+            href="https://leetcode.com/Akshayv30/"
+            class="tooltip"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              src="./assets/images/leetcode-svgrepo-com.svg"
+              alt="leetcode"
+            />
+            <span class="tooltiptext">leetcode</span>
+          </a>
+          <a
+            href="https://www.hackerrank.com/akshayatwork_v30"
+            class="tooltip"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="./assets/images/HackerRank_logo.png" alt="hackerrank" />
+            <span class="tooltiptext">hackerrank</span>
+          </a>
+        </div>
       </div>
 
       <div class="skills">
@@ -215,44 +220,98 @@
       </div>
 
       <div class="projects">
-        <h2>Projects</h2>
-        <ol>
-          <li>
-            <h3>Continuous Integration for sample app.</h3>
-            <p>
-               Spin-up AWS EC2 instance with minimal configuration.  Managed
-              source codes with source code management tool using Git. 
+        <div><h2>Projects</h2></div>
+        <div>
+          <h3>Continuous Integration for sample app.</h3>
+          <ul>
+            <li>Spin-up AWS EC2 instance with minimal configuration.</li>
+            <li>
+              Managed source codes with source code management tool using Git.
+            </li>
+            <li>
               Automated Continuous Integration pipeline for a sample app using
               Jenkins.
-            </p>
-          </li>
-          <li>
-            <h3>
-              Implementation of Continuous Integration and Continuous Deployment
-              for sample app
-            </h3>
-            <p>
-              Provisioned and configured AWS EC2 instances.  Jenkins automated
-              the task for deploying Docker Containers for respective Docker
-              image  Continuous Integration and Continuous Deployment pipeline
-              with Jenkins was made.
-            </p>
-          </li>
-          <li>
-            <h3>End to End web application deployment</h3>
-            <p>
+            </li>
+          </ul>
+          <a href="#"> Link to github repo</a>
+        </div>
+        <div>
+          <h3>
+            Implementation of Continuous Integration and Continuous Deployment
+            for sample app
+          </h3>
+          <ul>
+            <li>Provisioned and configured AWS EC2 instances.</li>
+            <li>
+              Jenkins automated the task for deploying Docker Containers for
+              respective Docker image
+            </li>
+            <li>
+              Continuous Integration and Continuous Deployment pipeline with
+              Jenkins was made.
+            </li>
+          </ul>
+          <a href="#"> Link to github repo</a>
+        </div>
+        <div>
+          <h3>End to End web application deployment</h3>
+          <ul>
+            <li>
               Sample web-app was deployed with terraform on AWS cloud platform.
-               Modules consisting of VPC and RDS (MySQL) resources were
-              declared.  AWS EC2 instance resource was configured with ALB and
-              Auto Scaling Group for the webserver.
-            </p>
-          </li>
-        </ol>
+            </li>
+            <li>
+              Modules consisting of VPC and RDS (MySQL) resources were declared.
+            </li>
+            <li>
+              AWS EC2 instance resource was configured with ALB and Auto Scaling
+              Group for the webserver.
+            </li>
+          </ul>
+          <a href="#"> Link to github repo</a>
+        </div>
       </div>
 
       <div class="workExperince">
-        <h2>WORK EXPERIENCE | INTERNSHIP</h2>
+        <div><h2>WORK EXPERIENCE | Industrial Exposure</h2></div>
+
         <ol>
+          <li>
+            <h3>
+              DevOps engineer| Intern | Pearl Thoughts. | Nov 2022
+              </h3>
+              <p> 
+              Infrastructure as a code, Snipe-IT an open source asset management
+              application was deployed in various environment for developer to
+              work upon, code spaces editor was used to setup development
+              environment wherein they updated the source code in git meanwhile
+              the GitHub actions triggered as continuous integration which
+              deployed the app in AWS cloud platform using terraform and Ansible
+              on AWS ECS Far Gate.  </p>
+              <p>Tools used: VS code, Code-Spaces,
+                Terraform, Ansible, ECR, ECS Far-Gate, AWS cloud</p>
+            </h3>
+          </li>
+
+          <li>
+            <h3>
+            DEVOPS ENGINEER | Training | EDUREKA | AUG 2020. </h3>
+          <p> Maintained Git workflow for
+            version control (Source Code Management). 
+            
+            </p>  
+            <p> Developed and maintained automated CI/CD pipeline for code development using Jenkins. </p>  
+            <p> Provisioned Servers and deployed features using
+            Ansible.</p> <p> Built and deployed Docker Containers for implementing
+            Micro Services Architecture from Monolithic Architecture. </p> 
+            <p>
+            Orchestrated Docker Container Cluster using Kubernetes / Docker
+            Swarm. </p>
+          </li>
+               
+        </ol>
+
+        <div >
+          <ol>
           <li>
             <h3>
               CAE Engineer (intern), Tata-Marco Polo Motors Ltd., Dharwad. | Mar
@@ -299,6 +358,7 @@
             <em>Tools used: Solid Edge ST-7 , Deform-3DTM</em>
           </li>
         </ol>
+        </div>
       </div>
 
       <div class="acdemicQualifications">
@@ -349,23 +409,30 @@
 
         <h2>contact</h2>
 
-        <a href="https://www.frontendmentor.io/profile/AkshayV30">
-          frontendmentor</a
+        <a
+          href="https://www.linkedin.com/in/minzakshaykumar06"
+          class="tooltip"
+          target="_blank"
+          rel="noopener noreferrer"
         >
-
-        <a href="https://www.linkedin.com/in/minzakshaykumar06" class="tooltip">
           <img src="./assets/images/linkedin-svgrepo-com.svg" alt="linkedin" />
           <span class="tooltiptext">Linkedin-Profile</span>
         </a>
-        <a href="https://leetcode.com/Akshayv30/" class="tooltip">
-          <img src="./assets/images/leetcode-svgrepo-com.svg" alt="leetcode" />
-          <span class="tooltiptext">leetcode</span>
-        </a>
-        <a href="https://www.hackerrank.com/akshayatwork_v30" class="tooltip">
-          <img src="./assets/images/HackerRank_logo.png" alt="hackerrank" />
-          <span class="tooltiptext">hackerrank</span>
-        </a>
       </div>
     </div>
+    <audio controls autoplay loop id="audio">
+      <source src="./assets/audio/audio_1.mp3" type="audio/mp3" />
+      <source
+        src="https://github.com/AkshayV30/AkshayV30/raw/master/assets/audio/audio_1.mp3"
+        type="audio/mp3"
+      />
+      audio
+    </audio>
+
+    <!-- <video autoplay controls loop class="b-video">
+      <source src="./assets/video/video_1.mp4" type="video/mp4">
+      <source src="https://github.com/AkshayV30/AkshayV30/raw/master/assets/video/video_1.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video> -->
   </body>
 </html>
