update-index.html -02

--- a/index.html
+++ b/index.html
@@ -387,14 +387,15 @@
         <h2>CERTIFICATIONS | TRAINING</h2>
         <ol>
           <li>
-            1. DevOps Engineer | EDUREKA Aug. 2020 https://www.edureka.co/verify
-            Certificate ID: Y3V1G41M
-          </li>
+            1. DevOps Engineer | EDUREKA Aug. 2020 | Certificate ID: <a href="https://www.edureka.co/verify"  target="_blank"
+            rel="noopener noreferrer">   Y3V1G41M</a> 
+           
+          <!-- </li>
           <li>
             ANSYS | CADD-Centre Feb. 2018
             http://www.caddcentre.com/caddVerification.php Student ID No.:
             M171016812
-          </li>
+          </li> -->
         </ol>
       </div>
 
