--- a/index.html
+++ b/index.html
@@ -419,8 +419,19 @@
           <img src="./assets/images/linkedin-svgrepo-com.svg" alt="linkedin" />
           <span class="tooltiptext">Linkedin-Profile</span>
         </a>
+
+        <a
+        href="#"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <img src="./assets/images/gmail-svgrepo-com.svg" alt="gmail" />
+      </a>
+
       </div>
     </div>
+
+
     <audio controls autoplay loop id="audio">
       <source src="./assets/audio/audio_1.mp3" type="audio/mp3" />
       <source
