--- a/index.html
+++ b/index.html
@@ -33,8 +33,15 @@
       <div class="stats">
         <div>
           <h2>stats</h2>
-          <a href="https://www.frontendmentor.io/profile/AkshayV30">
-            frontendmentor</a
+          <a href="https://www.frontendmentor.io/profile/AkshayV30" class="tooltip"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+          src="./assets/images/logo-desktop.svg"
+          alt="leetcode"
+        />
+            <span class="tooltiptext">frontendmentor</span>
+            </a
           >
           <a
             href="https://leetcode.com/Akshayv30/"
@@ -153,6 +160,22 @@
             <img src="./assets/images/ansible-svgrepo-com.svg" alt="ansible" />
             <span class="tooltiptext">ansible</span></a
           >
+
+          <a href="#" class="tooltip">
+            <img
+              src="./assets/images/docker-logo-svgrepo-com.svg"
+              alt="docker"
+            />
+            <span class="tooltiptext">Docker</span>
+          </a>
+
+          <a href="#" class="tooltip">
+            <img
+              src="./assets/images/kubernetes.png"
+              alt="kubernetes"
+            />
+            <span class="tooltiptext">Kubernetes</span>
+          </a>
         </div>
         <div>
           <a href="#" class="tooltip"
