update-index.html -03.2

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           target="_blank"
           rel="noopener noreferrer">
           <img
-          src="./assets/images/logo-desktop.svg"
+          src="./assets/images/frontendmentor-svgrepo-com.svg"
           alt="leetcode"
         />
             <span class="tooltiptext">frontendmentor</span>
@@ -105,14 +105,14 @@
             />
             <span class="tooltiptext">javascript</span></a
           >
-          <a href="#" class="tooltip"
+          <!-- <a href="#" class="tooltip"
             ><img src="./assets/images/angular.png" alt="angularJs" />
             <span class="tooltiptext">angularJs</span></a
           >
           <a href="#" class="tooltip"
             ><img src="./assets/images/react.png" alt="reactJS" />
             <span class="tooltiptext">reactJS</span></a
-          >
+          > -->
         </div>
 
         <div>
@@ -169,20 +169,20 @@
             <span class="tooltiptext">Docker</span>
           </a>
 
-          <a href="#" class="tooltip">
+          <!-- <a href="#" class="tooltip">
             <img
               src="./assets/images/kubernetes.png"
               alt="kubernetes"
             />
             <span class="tooltiptext">Kubernetes</span>
-          </a>
+          </a> -->
         </div>
         <div>
           <a href="#" class="tooltip"
             ><img src="./assets/images/aws-svgrepo-com.svg" alt="aws" />
             <span class="tooltiptext">amazon web services</span></a
           >
-          <a href="#" class="tooltip">
+          <!-- <a href="#" class="tooltip">
             <img src="./assets/images/aws-ec2-svgrepo-com.png" alt="aws-ec2" />
             <span class="tooltiptext">AWS Elastic Compute 2</span></a
           >
@@ -203,7 +203,7 @@
               alt="aws-codedeploy"
             />
             <span class="tooltiptext">AWS Cloud Deploy</span></a
-          >
+          > -->
         </div>
 
         <div>
